sts_all.yaml

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mongosvc
  name: mongosvc
spec:
  clusterIP: None
  selector:
    app: mongo
  type: ClusterIP
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongosvc"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo

    spec:

      containers:
      - name: mongo
        image: mongo:4.4.19-rc1-focal
        resources:
          requests:
            cpu: "0.2"
            memory: 128Mi
          limits:
            cpu: "0.5"
            memory: 256Mi

        volumeMounts:
        - name: data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 100Mi
